tests/src/frontend/syntax/invalid/when_clause_location.sk
class X<T>() {
  fun a[T: Show]<U>(): String {
    ""
  }
}
